# majixai.github.io

./: .gitignore  .index.py.swp  .log.swp  404.html  CLICK_ANALYTICS.md  Code.gs  Dockerfile  Email.html  GITHUB_ACTIONS_SETUP.md  Index.html  MarketMovers.gs  MarketMovers_Sidebar.html  PROJECT_OVERVIEW.md  README.md  SP500_ML_RESULTS.csv  Sidebar.html  YFINANCE_SETUP_COMPLETE.md  aggregate_alerts.py  analytics.js  animate.py  animations.css  app.py  blog.db  calendar.js  calendar_data.py  check_db.py  click_data.csv  code.gs  collector.py  company_chart.html  company_values.json  create_dummy_dat.py  create_dummy_pdf.py  create_dummy_pdf_2.py  data.csv  database.py  debug.html  deploy.sh  engine.py  fetch_data.py  (+33 more)
.github/: copilot-instructions.md  copilot-setup-steps.yml  update-readme.y
7t/: index.html
Gridiron/: Code.gs  GitIntegration.gs  index.html
OptionStrategy/: README.md  index.html  manifest.json  sw.js
QuantumMarket/: AIEngine.gs  Code.gs  DailyPrediction.gs  DataEngine.gs  EmailDataLoop.gs  Help.html  QuantLib.gs  README.md  appsscript.json  index.html
Security/: index.html
Trades/: index.html
actions/: README.md  actions-core.js  extend.py  index.html  metatrader5_setup.py  symbols.csv  yfinance_fetch_action.py
ai/: README.md  index.html  packet-router.js  script.js  structure-taxonomy.js  style.css
algebra/: README.md
app/: __init__.py  git_action_server.py  server_comm.py
assets/: commit-info.json  data.json
bayes/: README.md  bayes_core.py
best/: README.md  (+20 more)
yfinance_data/src_rust/: Cargo.toml
yfinance_data/src_rust/src/: lib.rs
(+2047 files in other folders)
